新通话PLC算法

--- a/services/Makefile
+++ b/services/Makefile
@@ -1,4 +1,4 @@
-obj-y := audioflinger/ bt_profiles/ fs/ bt_app/ overlay/ resources/ ../utils/crc32/
+obj-y := audio_dump/ audioflinger/ bt_profiles/ fs/ bt_app/ overlay/ resources/ ../utils/crc32/
 ifeq ($(BLE),1)
 obj-y += bluedroid/ bridge/ ble_app/
 endif
